# ZenBoost

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: DobbyPatch.cmake
include/: ZenBoost.h
src/: main.cpp
src/features/: Feature.h  FeatureManager.cpp  FeatureManager.h
src/gui/: ZenGui.cpp  ZenGui.h
src/hooks/: EGLHook.cpp  EGLHook.h  InputHook.cpp  InputHook.h
